[tool.poetry]
name = "spruce"
version = "0.0.0"
description = ""
authors = ["Eric Chen <eric@ericnchen.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
requests = "^2.22"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
